# fastapi-feature-routing

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
.github/workflows/: python-package.yml
ff_routing_fastapi/: main.py
ff_routing_fastapi/routes/: feature_flag.py
routes/: feature_flag.py
tests/: __init__.py  test_routes.py
utils/: feature_flag_routing.py
